# rp2040-embassy-snippets

./: Cargo.toml  Embed.toml  README.md  build.rs
.cargo/: config.toml
