[package]
name = "rp2040-embassy-snippets"
version = "0.1.0"
edition = "2021"


[dependencies]
# Embassy
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46bce329efe7921386dd46a493f607453bd8", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "intrinsics",
    "rom-v2-intrinsics",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46bce329efe7921386dd46a493f607453bd8", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46bce329efe7921386dd46a493f607453bd8", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-5120",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46bce329efe7921386dd46a493f607453bd8", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }

# Logging
defmt = "0.3"
defmt-rtt = "0.4.0"

# Embedded
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-graphics = { version = "0.8.1", features = ["defmt", "fixed_point"] }

# Drivers
sh1108 = "0.1.0"
display-interface-spi = "0.4"
display-interface-i2c = "0.4"

# Rp2040
pio-proc = "0.2"
pio = "0.2.1"

# Math
fixed = "1.24.0"
libm = "0.2.8"

[profile.release]
debug = 2
