[package]
name = "rp2040-embassy-snippets"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "intrinsics",
    "rom-v2-intrinsics",
] }
embassy-sync = { version = "0.5.0", features = [
    "defmt",
] }
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-5120",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = "0.1.1"

# Logging
defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Embedded
embedded-graphics = { version = "0.8.1", features = ["defmt", "fixed_point"] }
embedded-hal-bus = "0.1.0"

# Drivers
sh1108 = "0.1.0"
display-interface-spi = "0.5.0"
display-interface-i2c = "0.5.0"

# RP2040
pio = "0.2.1"
pio-proc = "0.2"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

# Math
fixed = "1.24.0"
libm = "0.2.8"

# Misc
futures = { version = "0.3.30", default-features = false }
heapless = { version = "0.8.0", features = ["defmt-03"] }

[patch.crates-io]
sh1108 = { git = "https://github.com/avsaase/sh1108", branch = "eh-1.0" }

[profile.release]
debug = 2
